fixing landing page spacing

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body {
 }
 
 h1.vis-title {
-  font-size: 45px;
+  font-size: 75px;
   margin-bottom: 0px;
 }
 
@@ -166,8 +166,12 @@ h1.vis-title {
 
 .landing-tagline {
   font-size: 16px;
-  margin-left: 70px;
+  /*margin-left: 70px;*/
   margin-top: 0px;
+  /*float: right;*/
+  width: 100%;
+  padding-right: 200px;
+  text-align: right;
 }
 
 .vid-title {
